# MAPS-core

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .release  AUTHORS.md  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  Makefile  PROJECT_STATUS.md  README.md  RECONSTRUCTION_WORKFLOW.md  RELEASE_NOTES.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml  pull_request_template.md
data/: medical_terms.json
docs/: ANALYSIS_AND_EXPORT_GUIDE.md  API_DEPLOYMENT.md  API_ENDPOINTS.md  API_REFERENCE.md  API_TEST_RESULTS.md  CASE_IDENTIFIER_QUICKSTART.md  COMPREHENSIVE_CODE_REVIEW_SUMMARY.md  CURRENT-STATE.md  DB_MIGRATION_SUMMARY.md  DEVELOPER_GUIDE.md  DEVLOG.md  EXCEL_EXPORTER_EXTRACTION.md  EXTENSIBILITY_GUIDE.md  GUI_GUIDE.md  GUI_RENDERING_PATTERN.md  GUI_STATE_REPORT.md  GUI_STATUS.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  KEYWORD_CONSOLIDATED_VIEW.md  KEYWORD_EXTRACTION.md  KEYWORD_NORMALIZATION_SUMMARY.md  MULTI_FORMAT_SUPPORT.md  PARSE_CASES.md  PDF_KEYWORD_EXTRACTOR_SUMMARY.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_REVIEW.md  RA_D_PS_EXPORT_GUIDE.md  SCHEMA_AGNOSTIC.md  SCHEMA_AGNOSTIC_SUMMARY.md  SECURITY.md  SECURITY_AUDIT.md  SIMPLIFIED_GUI_GUIDE.md  TEST_INSTRUCTIONS.md  TROUBLESHOOTING.md  TYPE_SAFETY_REVIEW.md  WEB_API_INTEGRATION.md
examples/: api_usage.py  auto_analysis_example.py  basic_parsing.py  batch_processing.py  keyword_extraction_example.py  launch_gui_example.py  parse_case_examples.py  pylidc_integration_example.py
scripts/: launch_gui.py  (+1 more)
(+87 files in other folders)
